--- a/intercoop_addons/coop_shift/views/shift_registration_view.xml
+++ b/intercoop_addons/coop_shift/views/shift_registration_view.xml
@@ -32,7 +32,7 @@
                     <field name="message_needaction" invisible="1"/>
                     <button name="confirm_registration" string="Confirm Registration" states="draft" type="object" icon="gtk-apply"/>
                     <button name="button_reg_cancel" string="Cancel Registration" states="draft" type="object" icon="gtk-cancel"/>
-                    <button name="do_draft" string="Set To Unconfirmed" states="cancel,done,absent,excused,replaced,replacing,open" type="object" icon="fa-backward" groups="coop_shift.group_shift_manager,coop_membership.group_membership_bdm_saisie"/>
+                    <button name="do_draft" string="Set To Unconfirmed" states="cancel,done,absent,excused,replaced,replacing,open" type="object" icon="fa-backward" groups="coop_shift.group_shift_manager"/>
                 </tree>
             </field>
         </record>
@@ -46,17 +46,14 @@
                     <field name="date_begin"/>
                     <field name="partner_id" options="{'no_create_edit': True, 'no_create': True}"/>
                     <field name="name"/>
-                    <field name="email" 
-                           groups="coop_membership.group_membership_access_user,
-                                   coop_membership.group_membership_bdm_saisie,
-                                   coop_membership.group_membership_see_associated_people"/>
+                    <field name="email"/>
                     <field name="shift_id" options="{'no_create_edit': True, 'no_create': True}"/>
                     <field name="shift_ticket_id" domain="[('shift_id', '=', shift_id)]" options="{'no_create_edit': True, 'no_create': True}"/>
                     <field name="state"/>
                     <field name="message_needaction" invisible="1"/>
                     <button name="confirm_registration" string="Confirm Registration" states="draft" type="object" icon="gtk-apply"/>
                     <button name="button_reg_cancel" string="Cancel Registration" states="draft" type="object" icon="gtk-cancel"/>
-                    <button name="do_draft" string="Set To Unconfirmed" states="cancel,done,absent,excused,replaced,replacing,open" type="object" icon="fa-backward" groups="coop_shift.group_shift_manager,coop_membership.group_membership_bdm_saisie"/>
+                    <button name="do_draft" string="Set To Unconfirmed" states="cancel,done,absent,excused,replaced,replacing,open" type="object" icon="fa-backward" groups="coop_shift.group_shift_manager"/>
                 </tree>
             </field>
         </record>        
