--- a/intercoop_addons/coop_account/view/view_account_move.xml
+++ b/intercoop_addons/coop_account/view/view_account_move.xml
@@ -5,9 +5,9 @@
         <field name="model">account.move</field>
         <field name="inherit_id" ref="account.view_move_tree"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='exported']" position="before">
-                <field name="statement_line_id"/>
-            </xpath>
+          <field name="ref" position="before">
+            <field name="statement_line_id"/>
+          </field>
         </field>
     </record>
 
